--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <!-- Canvas (same dimensions as main app) -->
     <div class="canvas-container" id="canvasContainer">
       <div class="canvas-scaled" id="canvasScaled">
-        <img src="../src/assets/layout-svg-min.svg" class="room-layout-background" alt="Room Layout">
+        <img src="layout-svg-min.svg" class="room-layout-background" alt="Room Layout">
         <div id="seatsContainer"></div>
       </div>
     </div>
