--- a/index.html
+++ b/index.html
@@ -343,63 +343,62 @@
     let dragSeatId = null;
 
     // Current config from seatPositions.ts (update this to load existing config)
-    const CURRENT_CONFIG = [
-      { id: 1, x: 335, y: 440 },
-      { id: 2, x: 395, y: 440 },
-      { id: 3, x: 455, y: 440 },
-      { id: 4, x: 520, y: 440 },
-      { id: 5, x: 585, y: 440 },
-      { id: 6, x: 650, y: 440 },
-      { id: 7, x: 710, y: 440 },
-      { id: 8, x: 780, y: 440 },
-      { id: 9, x: 840, y: 440 },
-      { id: 10, x: 910, y: 440 },
-      { id: 11, x: 970, y: 440 },
-      { id: 12, x: 1035, y: 440 },
-      { id: 13, x: 1095, y: 440 },
-      { id: 14, x: 1165, y: 440 },
-      { id: 15, x: 1225, y: 440 },
-      { id: 16, x: 1290, y: 440 },
-      { id: 17, x: 1350, y: 440 },
-      { id: 18, x: 1420, y: 440 },
-      { id: 19, x: 1480, y: 440 },
-      { id: 20, x: 1545, y: 440 },
-      { id: 21, x: 1605, y: 440 },
-      { id: 22, x: 1675, y: 440 },
-      { id: 23, x: 1735, y: 440 },
-      { id: 24, x: 1800, y: 440 },
-
-      // Row 2 - 3 seats
-      { id: 25, x: 1800, y: 480 },
-      { id: 26, x: 1800, y: 520 },
-      { id: 27, x: 1800, y: 560 },
-
-      // Row 3 - 24 seats
-      { id: 28, x: 1800, y: 600 },
-      { id: 29, x: 1735, y: 600 },
-      { id: 30, x: 1675, y: 600 },
-      { id: 31, x: 1605, y: 600 },
-      { id: 32, x: 1545, y: 600 },
-      { id: 33, x: 1480, y: 600 },
-      { id: 34, x: 1420, y: 600 },
-      { id: 35, x: 1350, y: 600 },
-      { id: 36, x: 1290, y: 600 },
-      { id: 37, x: 1225, y: 600 },
-      { id: 38, x: 1165, y: 600 },
-      { id: 39, x: 1095, y: 600 },
-      { id: 40, x: 1035, y: 600 },
-      { id: 41, x: 970, y: 600 },
-      { id: 42, x: 910, y: 600 },
-      { id: 43, x: 840, y: 600 },
-      { id: 44, x: 780, y: 600 },
-      { id: 45, x: 710, y: 600 },
-      { id: 46, x: 650, y: 600 },
-      { id: 47, x: 585, y: 600 },
-      { id: 48, x: 520, y: 600 },
-      { id: 49, x: 455, y: 600 },
-      { id: 50, x: 395, y: 600 },
-      { id: 51, x: 335, y: 600 },
-    ];
+const SEAT_POSITIONS: SeatPosition[] = [
+  { id: 1, x: 122, y: 740 },
+  { id: 2, x: 122, y: 677 },
+  { id: 3, x: 122, y: 612 },
+  { id: 4, x: 122, y: 520 },
+  { id: 5, x: 122, y: 420 },
+  { id: 6, x: 122, y: 360 },
+  { id: 7, x: 122, y: 303 },
+  //
+  { id: 8, x: 332, y: 448 },
+  { id: 9, x: 394, y: 448 },
+  { id: 10, x: 456, y: 448 },
+  { id: 11, x: 524, y: 448 },
+  { id: 12, x: 587, y: 448 },
+  { id: 13, x: 650, y: 448 },
+  { id: 14, x: 714, y: 448 },
+  { id: 15, x: 778, y: 448 },
+  { id: 16, x: 841, y: 448 },
+  { id: 17, x: 906, y: 448 },
+  { id: 18, x: 968, y: 448 },
+  { id: 19, x: 1036, y: 448 },
+  { id: 20, x: 1098, y: 448 },
+  { id: 21, x: 1164, y: 448 },
+  { id: 22, x: 1226, y: 448 },
+  { id: 23, x: 1291, y: 448 },
+  { id: 24, x: 1353, y: 448 },
+  { id: 25, x: 1418, y: 448 },
+  { id: 26, x: 1483, y: 448 },
+  { id: 27, x: 1577, y: 448 },
+  { id: 28, x: 1705, y: 448 },
+  //
+  { id: 29, x: 1798, y: 488 },
+  { id: 30, x: 1798, y: 556 },
+  //
+  { id: 31, x: 1703, y: 590 },
+  { id: 32, x: 1582, y: 590 },
+  { id: 33, x: 1480, y: 590 },
+  { id: 34, x: 1420, y: 590 },
+  { id: 35, x: 1350, y: 590 },
+  { id: 36, x: 1290, y: 590 },
+  { id: 37, x: 1225, y: 590 },
+  { id: 38, x: 1165, y: 590 },
+  { id: 39, x: 1095, y: 590 },
+  { id: 40, x: 1035, y: 590 },
+  { id: 41, x: 970, y: 590 },
+  { id: 42, x: 910, y: 590 },
+  { id: 43, x: 840, y: 590 },
+  { id: 44, x: 780, y: 590 },
+  { id: 45, x: 710, y: 590 },
+  { id: 46, x: 650, y: 590 },
+  { id: 47, x: 585, y: 590 },
+  { id: 48, x: 520, y: 590 },
+  { id: 49, x: 455, y: 590 },
+  { id: 50, x: 395, y: 590 },
+  { id: 51, x: 332, y: 590 }
+];
 
     // DOM elements
     const canvasContainer = document.getElementById('canvasContainer');
